# tokengeex

./: .gitignore  Cargo.toml  NOTES.md  README.md  file.txt
.github/workflows/: python-release.yaml  rust-realse.yaml
benches/: bench.rs  unigram.json
bindings/node/: Cargo.toml  example.js  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  example.py  pyproject.toml  tokengeex.pyi
bindings/python/src/: lib.rs
data/: base.regex  capcode.regex  exact-plus.regex  exact.regex  general.regex  gpt4.regex  init.regex  tokengeex.regex  unigram-65k.json
docs/: DATASET.md  RECIPES.md  REGEXES.md
examples/: python.py
scripts/: benchmark.py  compare.py  compression.py  convert.py  datagen.py  evaluate.py  evaluate.sh  find.py  gentrain.py  install.sh  plot.py  setup-vm.sh  trainbpe.py  trainhf.py
scripts/data/: build.py
src/: bench.rs  capcode.rs  cli.rs  core.rs  filter.rs  generate.rs  lattice.rs  lib.rs  merge.rs  mine.rs  model.rs  parallelism.rs  processor.rs  prune.rs  regex.rs  task.rs  token.rs  tokenizer.rs  trainer.rs  trie.rs  vocab.rs
src/processors/: mod.rs
src/unigram/: mod.rs  serialization.rs  trainer.rs
src/utils/: capcode.rs  lattice.rs  mod.rs  task.rs  trie.rs
web/: main.py
