[package]
name = "tokengeex"
authors = ["Diego ROJAS (罗杰斯) <rojasdiegopro@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://codegeex.cn"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tokenizer", "codegeex", "llm", "nlp"]
description = "TokenGeeX is an efficient tokenizer for code based on UnigramLM and TokenMonster."

[lib]
name = "tokengeex"
path = "src/lib.rs"
