[package]
name = "tokengeex"
authors = ["Diego ROJAS (罗杰斯) <rojasdiegopro@gmail.com>"]
version = "0.5.0"
edition = "2021"
homepage = "https://codegeex.cn"
documentation = "https://docs.rs/tokengeex/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tokenizer", "codegeex", "llm", "nlp"]
description = "TokenGeeX is an efficient tokenizer for code based on UnigramLM and TokenMonster."
exclude = ["data/*", "target/*", ".github/*", ".gitignore"]

[lib]
name = "tokengeex"
path = "src/lib.rs"

[[bin]]
name = "tokengeex"
path = "src/cli.rs"
required-features = ["cli"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
unicode_categories = "0.1.1"
rayon = "1.8"
rayon-cond = "0.3"
derive_builder = "0.12"
log = "0.4"
xflags = "0.3.2"
env_logger = "0.9"
base64 = "0.21.7"

[dev-dependencies]
assert_approx_eq = "1.1"
criterion = { version = "0.3", features = ["html_reports"] }

[features]
cli = []
