[package]
name = "tokengeex-python"
authors = ["Diego ROJAS (罗杰斯) <rojasdiegopro@gmail.com>"]
version = "0.4.0"
edition = "2021"
homepage = "https://codegeex.cn"
documentation = "https://docs.rs/tokengeex/"
license = "Apache-2.0"
keywords = ["tokenizer", "codegeex", "llm", "nlp"]
description = "TokenGeeX is an efficient tokenizer for code based on UnigramLM and TokenMonster."
exclude = ["target/*", ".env/*", ".gitignore"]

[lib]
name = "tokengeex"
crate-type = ["cdylib"]

[dependencies]
tokengeex = { path = "../..", version = "0.1.0" }
pyo3 = "0.19.0"
