[project]
name = "tokengeex"
requires-python = ">=3.8"
authors = [{ name = "Diego ROJAS (罗杰斯)", email = "rojasdiegopro@gmail.com" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["tokenizer", "nlp"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rojas-diego/tokengeex"
Source = "https://github.com/rojas-diego/tokengeex"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
